
Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/issues/new/choose).

## Join us on Discord for active test builds and much more : [Click Here](https://discord.gg/6fHCRKnDc9)

## v2.10.3.7 Change Log
- [add] added OE3IDE Connectors and Tools link to the about box links
- [change] moved release notes button from setup to the about box
- [change] skin images are resized to button/panel/slider etc instead of relying on tile property
- [fix] variables that have name with _double now consider %precis=N%
- [fix] resolved issue where redraw of console controls became very slow after 8thOct Windows update
- [fix] button boxes filter/antenna would not save columns correctly
- [fix] fade on rx and fade on tx fixed for button boxes

## v2.10.3.6 Main New Features
- database manager
- many new meter items, including rotator, band/filter/mode/antenna button boxes, text overlay and led indicator, much much more
- vfo meter item control now has user interactive elements
- new multimeter/data IO system
- some legacy UI items can be removed. This will be extended in the future
- improvements to NR2 including trained machine data
- coordinate system for multimeters to align things easier
- kenwood broadcast data options for cat1-4/tcpip cat
- autostart applications
- diversity memories
- additional midi and cat options/commands
- fn keys for cwx, including options to not need window focus
- cmASIO, including P1 & P2 support, for low latency audio
- an about box finally arrives
- endless bugs fixed and improvements throughout
- lots more, see full change log below

## v2.10.3.6 Change Log
- [add] total re-work of database management. There is now a database manager. I advise you to watch video : https://youtu.be/pwe3bd-tkGY
- [add] rotator can now be stopped. Hover mouse over arrow pivot point to see red circle. Click in circle and STOP will be sent. Note: reset the pstRotator commands if you are already using before this update