@@ -141,7 +141,14 @@
             "G2 Firmware & Software \"p2app\"",
             "Thetis for Hermes Lite 2 on GitHub",
             "WDSP Documentation on GitHub",
-            "OE3IDE\'s (Ernst) Connectors & Tools"});
+            "OE3IDE\'s (Ernst) Connectors & Tools",
+            "---MANUALS---",
+            "Thetis",
+            "Cat Command Reference",
+            "PureSignal",
+            "Midi",
+            "cmASIO",
+            "Behringer"});
             this.lstLinks.Location = new System.Drawing.Point(345, 108);
             this.lstLinks.Name = "lstLinks";
             this.lstLinks.Size = new System.Drawing.Size(267, 130);
@@ -188,7 +195,7 @@
             this.btnVisit.Selectable = true;
             this.btnVisit.Size = new System.Drawing.Size(88, 23);
             this.btnVisit.TabIndex = 10;
-            this.btnVisit.Text = "Visit";
+            this.btnVisit.Text = "View";
             this.toolTip1.SetToolTip(this.btnVisit, "Visit he selected link");
             this.btnVisit.UseVisualStyleBackColor = false;
             this.btnVisit.Click += new System.EventHandler(this.btnVisit_Click);
@@ -255,9 +262,9 @@
             this.labelTS3.Image = null;
             this.labelTS3.Location = new System.Drawing.Point(342, 85);
             this.labelTS3.Name = "labelTS3";
-            this.labelTS3.Size = new System.Drawing.Size(41, 16);
+            this.labelTS3.Size = new System.Drawing.Size(102, 16);
             this.labelTS3.TabIndex = 11;
-            this.labelTS3.Text = "Links:";
+            this.labelTS3.Text = "Links / Manuals:";
             // 
             // labelTS2
             // 
